# cppx

./: CMakeLists.txt  README
app/: CMakeLists.txt  demox.cpp
src/: CMakeLists.txt  Dicom.Imaging.Codec.Jpeg2000.cpp  Dicom.Imaging.Codec.JpegLS.cpp  Dicom.Imaging.Codec.Jpeg_12.cpp  Dicom.Imaging.Codec.Jpeg_16.cpp  Dicom.Imaging.Codec.Jpeg_8.cpp  Unity.cpp  Unity.h
src/impl/: personImpl.cpp  personImpl.h
src/include/: DataSet.h  DefaultTags.h  DicomDictionary.h  DicomDictionaryEntry.h  DicomFileReader.h  DicomHeaderParser.h  DicomItem.h  DicomPrivateCreator.h  DicomReader.h  DicomStreamReader.h  DicomTag.h  DicomUID.h  DicomVM.h  DicomVR.h  Endian.h  ExplicitVrLittleEndianReader.h  ExplicitVrReader.h  ExplicitVrSQ.h  ExppiciteVrLittleEndianReader.h  FileHelper.h  ImplicitVrLittleEndianReader.h  ImplicitVrReader.h  OutOfException.h  Person.h  PrivateDictionary.h  StringHelper.h  TagValueReader.h  TransferFactory.h  comm.h  dicts.h  privDicts.h
src/libijg12/: jerror.c
src/libijg16/: jerror.c
src/libijg8/: jerror.c
src/src/: DataSet.cpp  DicomDictionary.cpp  DicomFileReader.cpp  DicomHeaderParser.cpp  DicomItem.cpp  DicomPrivateCreator.cpp  DicomReader.cpp  DicomStreamReader.cpp  DicomTS.cpp  DicomTag.cpp  DicomUID.cpp  DicomVM.cpp  DicomVR.cpp  Endian.cpp  ExplicitVrLittleEndianReader.cpp  ExplicitVrReader.cpp  ExplicitVrSQ.cpp  ExppiciteVrLittleEndianReader.cpp  FileHelper.cpp  ImplicitVrLittleEndianReader.cpp  ImplicitVrReader.cpp  Person.cpp  PrivateDictionary.cpp  StringHelper.cpp  TagValueReader.cpp  TransferFactory.cpp  cc.yml  comm.cpp  dicts.cpp  tagConstant.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  Unity_FileReaderTest.cpp  Unity_PrivateDictinaryTest.cpp  Unity_StringTest.cpp  Unity_TagTest.cpp  Unity_unittest.cpp
tests/dcmfiles/other-pass/: T.dcm  VR2019.dcm
